[package]
name = "krh_fontdue"
version = "0.8.0"
authors = ["Joe Cumbo <mooman219@gmail.com>"]
license = "MIT OR Apache-2.0 OR Zlib"
documentation = "https://docs.rs/fontdue"
homepage = "https://github.com/mooman219/fontdue"
repository = "https://github.com/mooman219/fontdue"
description = "A simple no_std font parser and rasterizer."
keywords = ["font", "text", "truetype", "opentype", "ttf"]
categories = ["no-std", "gui"]
readme = "README.md"
edition = "2018"
exclude = ["dev/**"]

[badges]
maintenance = { status = "experimental" }

[features]
default = ["simd", "png", "colr", "variable-fonts", "opentype-layout"]
std = ["ttf-parser/std"]
no-std = ["tiny-skia/no-std-float"]
# Enable this flag to leverage SIMD usage on x86/x86_64 platforms.
simd = ["tiny-skia/simd"]
png = ["tiny-skia/png-format", "std"]
colr = ["tiny-skia"]
variable-fonts = ["ttf-parser/variable-fonts"]
opentype-layout = ["ttf-parser/opentype-layout"]

[dependencies]
ttf-parser = { version = "0.21.1", default-features = false }
hashbrown = "0.14"
tiny-skia = { version = "0.11.4", optional = true, default-features = false }
